2003-04-22  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* common/vlad.h :

	  - Added new error code: no model.

	* kb/kb.cpp :

	  - Added identity rules (ie. each set is a subset of itself).

	  - Query now works properly.

	  - Fixed bug with the generation of some rules.

	* kb/wrapper.cpp :
	* kb/wrapper.h :

	  - added ask() function.

	* kb/kb.cpp :
	* kb/wrapper.cpp :
	* kb/wrapper.h :

	  - Added debug code.

	  - Replaced the redundant add_rule_*() functions with add_rule() and
	    add_axiom().

	  - Stopped using CHOICERULE as they encourage the result of more than
	    one stable model. Multiple heads are now just repeated:

	    a, b, c :- x, y, z.

	    is now

	    a :- x, y, z.
	    b :- x, y, z.
	    c :- x, y, z.

2003-04-17  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/kb.cpp :

	  - Added all rules in evaluate_query().

	* kb/wrapper.cpp :
	* kb/wrapper.h :

	  - Added checks to ensure that empty tails have the constant true.

	  - Added stages to ensure that functions are called in the right
	    order.

	  - Enumerated all possible combinations of the different formats
	    of add_rule().

	* common/numberlist.h :
	* common/numberlist.cpp :

	  - Removed numberlistlist.

	  - Added purge() function.

	* common/vlad.h :
	* main/vlad.cpp :
	* parser/parser.y :

	  - Changed modes to GENERATE and EVALUATE.

	  - Also changed the command line flag from -s to -e (from smodels to
	    evaluate).

	* common/list.h :

	  - Added a length macro that returns the length of the list ptr, 0
	    if pointer is NULL.

	* common/vlad.h :

	  - Added string constants to centralise symbols.

	  - Added numeric lengths for string constants.

	  - Added conversion macros to convert int/bool to its boolean string
	    eqivalent.

	* kb/kb.cpp :

	  - Added inheritance rules code.

	* kb/wrapper.cpp :
	* kb/wrapper.h :

	  - Cleanup.

	  - Added functions to register rules of different formats.

2003-04-16  Vino Crescini  <jcrescin@cit.uws.edu.au>
